added example forest code from Ihler's homework solution

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -25,8 +25,78 @@
    "outputs": [],
    "source": [
     "X = np.genfromtxt(\"data/kaggle.X1.train.txt\",delimiter=',')\n",
-    "Y = np.genfromtxt(\"data/kaggle.Y.train.txt\",delimiter=',')\n",
-    "[Xt,Xv,Yt,Yv] = ml.splitData(X,Y,0.80)"
+    "Y = np.genfromtxt(\"data/kaggle.Y.train.txt\",delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "[Xt,Xv,Yt,Yv] = ml.splitData(X,Y,0.20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "lr = dt.treeRegress(Xt,Yt, maxDepth=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train MSE:  0.0170504335486\n",
+      "Valid MSE:  0.7979331304\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Train MSE: \",lr.mse(Xt,Yt))\n",
+    "print(\"Valid MSE: \",lr.mse(Xv,Yv))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "M = Xt.shape[0]\n",
+    "Mv= Xv.shape[0]\n",
+    "rforest = [None]*25\n",
+    "YtHat = np.zeros((M,25))\n",
+    "YvHat = np.zeros((Mv,25))\n",
+    "for l in range(25):\n",
+    "    #print \"Training {}\".format(l) # uncomment if you want to monitor progress...\n",
+    "    Xi,Yi = ml.bootstrapData(Xt,Yt, M) # draw this member’s random sample of data\n",
+    "    rforest[l] = dt.treeRegress() # and train the model on that draw\n",
+    "    rforest[l].train(Xi,Yi,maxDepth=15,nFeatures=60)\n",
+    "    YtHat[:,l] = rforest[l].predict(Xt)[:,0] # predict on training data\n",
+    "    YvHat[:,l] = rforest[l].predict(Xv)[:,0] # and validation data & save results\n",
+    "print()\n",
+    "for l in [1,5,10,15]:\n",
+    "    # Make the prediction (mean of columns 0...l-1) and score the MSE:\n",
+    "    mseT = ((Yt - YtHat[:,0:l].mean(axis=1))**2).mean()\n",
+    "    mseV = ((Yv - YvHat[:,0:l].mean(axis=1))**2).mean()\n",
+    "    print(\"{:02d} members: {} train, {} valid\".format(l,mseT,mseV))"
    ]
   },
   {
