added random forests example

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -77,7 +77,24 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training 0\n",
+      "Training 1\n",
+      "Training 2\n",
+      "Training 3\n",
+      "Training 4\n",
+      "Training 5\n",
+      "Training 6\n",
+      "Training 7\n",
+      "Training 8\n",
+      "Training 9"
+     ]
+    }
+   ],
    "source": [
     "M = Xt.shape[0]\n",
     "Mv= Xv.shape[0]\n",
@@ -85,7 +102,7 @@
     "YtHat = np.zeros((M,25))\n",
     "YvHat = np.zeros((Mv,25))\n",
     "for l in range(25):\n",
-    "    #print \"Training {}\".format(l) # uncomment if you want to monitor progress...\n",
+    "    print(\"Training {}\".format(l)) # uncomment if you want to monitor progress...\n",
     "    Xi,Yi = ml.bootstrapData(Xt,Yt, M) # draw this member’s random sample of data\n",
     "    rforest[l] = dt.treeRegress() # and train the model on that draw\n",
     "    rforest[l].train(Xi,Yi,maxDepth=15,nFeatures=60)\n",
