added neurolab_with_kaggle notebook

--- a/nn_with_reg_demo.ipynb
+++ b/nn_with_reg_demo.ipynb
@@ -37,6 +37,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {
     "collapsed": true
