--- a/neurolab1.ipynb
+++ b/neurolab1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:465bcfa4f02083db23234d1fa52f28a0462165ee3fafbb2d97510b7710b48209"
+  "signature": "sha256:00745ff17bb3d34e62cc1678007adf57be7303e4181cf9b5219056933a87ec45"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -9,22 +9,17 @@
   {
    "cells": [
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "\n",
-      "import numpy as np\n",
-      "np.random.seed(0)\n",
-      "import mltools as ml\n",
-      "import matplotlib.pyplot as plt   # use matplotlib for plotting with inline plots\n",
-      "%matplotlib inline\n",
-      "\n",
-      "import mltools.dtree as dt    # import decision tree code"
-     ],
-     "language": "python",
+     "cell_type": "heading",
+     "level": 4,
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
+     "source": [
+      "Most relevant\n",
+      "https://github.com/zueve/neurolab\n",
+      "https://code.google.com/archive/p/neurolab/\n",
+      "Also relevant\n",
+      "https://pythonhosted.org/neurolab/lib.html#module-neurolab.train\n",
+      "https://pythonhosted.org/neurolab/ex_newff.html"
+     ]
     },
     {
      "cell_type": "code",
@@ -42,20 +37,20 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[[-0.33869048  0.15310833]\n",
-        " [-0.2467084  -0.03368923]\n",
-        " [-0.25557441 -0.34103042]\n",
-        " [-0.38962486  0.15632959]\n",
-        " [-0.36181705 -0.30341764]\n",
-        " [-0.13127483  0.32099323]\n",
-        " [-0.40289872  0.33794491]\n",
-        " [-0.40390159  0.47645947]\n",
-        " [-0.0313488   0.47676109]\n",
-        " [ 0.10484552  0.23926358]]\n"
+        "[[ 0.0488135   0.21518937]\n",
+        " [ 0.10276338  0.04488318]\n",
+        " [-0.0763452   0.14589411]\n",
+        " [-0.06241279  0.391773  ]\n",
+        " [ 0.46366276 -0.11655848]\n",
+        " [ 0.29172504  0.02889492]\n",
+        " [ 0.06804456  0.42559664]\n",
+        " [-0.42896394 -0.4128707 ]\n",
+        " [-0.4797816   0.33261985]\n",
+        " [ 0.27815675  0.37001215]]\n"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -71,20 +66,20 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[[-0.18558216]\n",
-        " [-0.28039762]\n",
-        " [-0.59660482]\n",
-        " [-0.23329527]\n",
-        " [-0.66523469]\n",
-        " [ 0.1897184 ]\n",
-        " [-0.06495382]\n",
-        " [ 0.07255787]\n",
-        " [ 0.44541229]\n",
-        " [ 0.3441091 ]]\n"
+        "[[ 0.26400287]\n",
+        " [ 0.14764656]\n",
+        " [ 0.06954891]\n",
+        " [ 0.32936021]\n",
+        " [ 0.34710428]\n",
+        " [ 0.32061996]\n",
+        " [ 0.4936412 ]\n",
+        " [-0.84183464]\n",
+        " [-0.14716176]\n",
+        " [ 0.6481689 ]]\n"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -100,11 +95,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "<neurolab.core.Net object at 0x080F19F0>\n"
+        "<neurolab.core.Net object at 0x080F1FB0>\n"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -123,7 +118,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -142,7 +137,7 @@
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -156,13 +151,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 22,
        "text": [
         "array([[ 0.28535462]])"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -171,7 +166,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 22
     }
    ],
    "metadata": {}
