fixing the predict function

--- a/CS178_Final_Project_maxLeaves.ipynb
+++ b/CS178_Final_Project_maxLeaves.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -20,7 +20,7 @@
     "import numpy as np\n",
     "import mltools as ml\n",
     "import matplotlib.pyplot as plt \n",
-    "import mltools.dtree_maxLeaves2 as dtml2\n",
+    "import mltools.dtree_maxLeaves27 as dtml2\n",
     "import mltools.dtree as dt\n",
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -29,12 +29,15 @@
     "X1 = np.genfromtxt(\"data/kaggle.X1.train.txt\",delimiter=',')\n",
     "Y = np.genfromtxt(\"data/kaggle.Y.train.txt\",delimiter=',')\n",
     "\n",
-    "Xtr,Xva,Ytr,Yva = ml.splitData(X1,Y) "
+    "X = X1[0:50]\n",
+    "Y = Y[0:50]\n",
+    "\n",
+    "Xtr,Xva,Ytr,Yva = ml.splitData(X,Y) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -43,20 +46,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\n",
-      "[  1.   2.   3.   0.   0.   6.   0.   0.   9.  10.   0.   0.  13.   0.   0.]\n",
-      "[  8.   5.   4.   0.   0.   7.   0.   0.  12.  11.   0.   0.  14.   0.   0.]\n",
-      "[  9.  55.  83.  -1.  -1.  23.  -1.  -1.   6.  67.  -1.  -1.   6.  -1.  -1.]\n",
-      "[  2.41221700e+04   2.10193800e+01  -4.27132900e-01   9.66420419e-01\n",
-      "   4.33672270e-01   2.22895000e+04   1.61352556e+00   1.10308657e+00\n",
-      "   1.99954100e+02   7.96890200e+01   4.83582296e-02   3.28163014e-01\n",
-      "   9.50590150e+02   4.55836293e-01   8.66007309e-01]\n"
+      "91\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "invalid slice",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-66-dc1b64b12836>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# learner = dt.treeRegress(Xtr,Ytr,maxDepth=3)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmlLearner\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdtml2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtreeRegress\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXtr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mYtr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmaxLeaves\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/Sharon/ml_final_project/mltools/dtree_maxLeaves27.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m     \u001b[0;31m# if we were given optional arguments,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m    \u001b[0;31m#  just pass them through to \"train\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/Sharon/ml_final_project/mltools/dtree_maxLeaves27.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, X, Y, minParent, maxDepth, minScore, nFeatures, maxLeaves)\u001b[0m\n\u001b[1;32m    143\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    144\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 145\u001b[0;31m         \u001b[0mbest_feat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbest_thresh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbest_val\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__dectree_train\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mL\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mminParent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaxDepth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mminScore\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnFeatures\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    146\u001b[0m         \u001b[0mL\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    147\u001b[0m         \u001b[0mR\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/Sharon/ml_final_project/mltools/dtree_maxLeaves27.py\u001b[0m in \u001b[0;36m__dectree_train\u001b[0;34m(self, X, Y, L, R, F, T, next, minParent, minScore, nFeatures, leaves, maxLeaves)\u001b[0m\n\u001b[1;32m    231\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    232\u001b[0m         \u001b[0;31m# ...otherwise, search over (allowed) features\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 233\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mi_feat\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtry_feat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mnFeatures\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    234\u001b[0m             \u001b[0mdsorted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mi_feat\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m                       \u001b[0;31m# sort data...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    235\u001b[0m             \u001b[0mpi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margsort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mi_feat\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m                                      \u001b[0;31m# ...get sorted indices...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: invalid slice"
      ]
     }
    ],
    "source": [
-    "learner = dt.treeRegress(Xtr,Ytr,maxDepth=3)\n",
-    "# mlLearner = dtml2.treeRegress(Xtr,Ytr,maxLeaves=7)"
+    "# learner = dt.treeRegress(Xtr,Ytr,maxDepth=3)\n",
+    "mlLearner = dtml2.treeRegress(Xtr,Ytr,maxLeaves=7)"
    ]
   },
   {
